# spu-luna-bot

./: .env.staging  .pre-commit-config.yaml  Makefile  README.md  docker-compose-staging.yml  pyproject.toml  ruff.toml
.docker/dev/bot/: Dockerfile
boto/: main.py
boto/src/: consumer.py  dependency.py  settings.py  utils.py
boto/src/api/: repository.py  schema.py  service.py
boto/src/infrastructure/broker/rabbitmq/: __init__.py  accessor.py
